Fixed all the tests for all the creators